k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-api
  template:
    metadata:
      labels:
        app: simple-api
    spec:
      containers:
        - name: simple-api-container
          image: raihanfadhlal/simple-api:1.0
          ports:
            - containerPort: 8080
