k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api-service
spec:
  type: NodePort
  selector:
    app: simple-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
